# retail_manager

./: .dockerignore  Cargo.toml  docker-compose.yml  movine.toml
backend/: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile.migrator  deploy.sh  docker-compose.yml
backend/customer_orders/: Cargo.toml
backend/customer_orders/src/: customer_order_repository.rs  customer_repository.rs  lib.rs
backend/customer_orders/src/models/: customer.rs  customer_order.rs  mod.rs
backend/customer_orders/src/types/: mod.rs
backend/customers/: Cargo.toml
backend/customers/src/models/: customer_order.rs
backend/domain/: Cargo.toml
backend/domain/src/: lib.rs
backend/domain/src/models/: account_settings.rs  city.rs  client.rs  client_order.rs  customer.rs  customer_order.rs  identity.rs  mod.rs  product.rs  user.rs
backend/domain/src/repositories/: account_settings_repository.rs  cities_repository.rs  email_and_password_identity_repository.rs  mod.rs  user_repository.rs
backend/domain/src/types/: email.rs  mod.rs  order_status.rs  payment_status.rs  phone_number.rs  repository_error.rs  validation_error.rs
backend/http_api/: Cargo.toml
backend/http_api/src/: config.rs  lib.rs  main.rs
backend/http_api/src/auth/: extractors.rs  jwt.rs  mod.rs  routes.rs
backend/http_api/src/cities/: postgres.rs  routes.rs
backend/http_api/src/client_orders/: postgres.rs  routes.rs
backend/http_api/src/clients/: postgres.rs  routes.rs
backend/http_api/src/customer_orders/: mod.rs  postgres.rs  routes.rs
backend/http_api/src/customers/: postgres.rs  routes.rs
backend/http_api/src/identities/: postgres.rs
backend/http_api/src/measurement_units/: postgres.rs
backend/http_api/src/pricing/: postgres.rs
backend/http_api/src/products/: postgres.rs  routes.rs
backend/http_api/src/routes/: account_settings.rs  auth.rs  customer_orders.rs  customers.rs  measurement_units.rs  mod.rs  pricing.rs  products.rs
backend/http_api/src/types/: error_json.rs  mod.rs  repository_error.rs
backend/http_api/src/users/: postgres.rs
backend/inventory/: Cargo.toml
backend/inventory/src/models/: inventory_level.rs  measurement_unit.rs  mod.rs
backend/inventory/src/repositories/: inventory_level_repository.rs  measurement_unit_repository.rs  mod.rs  product_repository.rs
backend/migrations/2020-08-10-224906_create_products/: up.sql
backend/migrations/2020-08-10-225047_create_cities/: up.sql
backend/migrations/2020-08-10-225103_create_client_orders/: down.sql  up.sql
backend/migrations/2020-08-10-225106_create_client_order_items/: down.sql  up.sql
backend/migrations/2020-08-10-235824_create_product_prices/: down.sql  up.sql
backend/migrations/2020-08-15-142819_add_status_to_client_orders/: down.sql  up.sql
backend/migrations/2020-08-15-223504_add_ordered_at_to_client_orders/: down.sql  up.sql
backend/migrations/2020-08-15-223516_remove_timestamp_from_client_order_items/: down.sql  up.sql
backend/migrations/2020-08-15-223530_add_payment_status_to_client_orders/: down.sql  up.sql
backend/migrations/2020-08-20-004059_add_current_product_prices_view/: down.sql  up.sql
backend/migrations/2020-08-23-172854_add_address_to_client_orders/: down.sql  up.sql
backend/migrations/2020-09-06-205409_fix_clients_phone_number_constraint/: down.sql  up.sql
backend/migrations/2020-09-19-000305_add_fields_to_client_orders/: down.sql  up.sql
backend/migrations/2020-09-19-001217_add_address_to_clients/: down.sql  up.sql
backend/migrations/2020-09-20-231928_create_email_and_password_identities/: down.sql  up.sql
backend/migrations/2021-01-01-225816_add_accounts/: down.sql  up.sql
backend/migrations/2021-02-16-143912_rename_clients_to_customers/: down.sql  up.sql
backend/migrations/2021-04-24-202539_remove_payment_status_from_customer_orders/: down.sql  up.sql
backend/migrations/2021-05-06-224741_change_product_prices_price_to_float/: up.sql
backend/migrations/2021-06-09-093953_create_inventory_levels/: down.sql  up.sql
backend/migrations/2021-06-11-073929_index_inventory_levels/: down.sql  up.sql
backend/migrations/2021-06-11-073939_create_account_settings/: down.sql  up.sql
backend/migrations/2021-06-11-075009_add_missing_indexes/: down.sql  up.sql
backend/pricing/: Cargo.toml
backend/pricing/src/: lib.rs
backend/pricing/src/models/: mod.rs  product_prices.rs
backend/pricing/src/repositories/: mod.rs  product_price_repository.rs
backend/src/: config.rs  crypto.rs  lib.rs
backend/src/auth/: extractors.rs  jwt.rs  middleware.rs  routes.rs
backend/src/cities/: mod.rs  model.rs  postgres.rs  routes.rs
backend/src/client_orders/: model.rs  postgres.rs  routes.rs
backend/src/clients/: model.rs  postgres.rs  routes.rs
backend/src/common/: auth.rs
backend/src/identities/: model.rs  postgres.rs
backend/src/measurement_units/: model.rs  postgres.rs  routes.rs
backend/src/products/: model.rs  postgres.rs  routes.rs
backend/src/types/: email.rs  mod.rs  order_status.rs  phone_number.rs  repository_error.rs  repository_result.rs
backend/src/users/: mod.rs  model.rs  postgres.rs
frontend/: .dockerignore  .env  .env.production  .eslintcache  .eslintrc.json  Dockerfile  README.md  deploy.sh  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  Loadable.ts  NavBar.tsx  config.ts  index.css  model.tsx  orderStatusToColorVariant.tsx  paymentStatusToColorVariant.tsx  simpleFetch.ts  theme.ts  translateOrderStatus.ts  translatePaymentStatus.ts
frontend/src/auth/: AuthContext.tsx  AuthService.ts  (+2 more)
gateway/: api_backends.conf  api_gateway.conf  nginx.conf
gateway/api_conf.d/: api.conf  auth.conf  frontend.conf
migrations/2020-08-10-224906_create_products/: down.sql
migrations/2020-08-10-225048_create_clients/: up.sql
migrations/2020-08-10-225106_create_client_order_items/: up.sql
src/: main.rs
src/client_orders/: model.rs  routes.rs
src/clients/: model.rs  routes.rs
src/products/: model.rs  routes.rs
(+150 files in other folders)
