[package]
name = "retail_manager"
version = "0.1.0"
authors = ["Santiago Ocamica <santi6982@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
sqlx = { version = "0.3.5", features = ['postgres', 'macros', 'chrono', 'uuid'] }
actix-web = "2.0.0"
actix-rt = "1.1.1"
dotenv = "0.15.0"
chrono = { version = "0.4.11", features = ['serde'] }
serde = { version = "1.0.112", features = ['derive'] }
serde_json = "1.0.55"
anyhow = "1.0.31"
futures = "0.3.5"
uuid = { version = "0.8.1", features = ['v4', 'serde'] }
pretty_env_logger = "0.4.0"
log = "0.4.8"
rust_decimal = "1.6.0"
actix-cors = "0.2.0"
async-trait = "0.1.40"
actix-identity = "0.2.1"
rust-argon2 = "0.8.2"
rand = "0.7.3"
envy = "0.4.1"
lazy_static = "1.4.0"
jsonwebtoken = "7.2.0"
actix-service = "1.0.6"
