[package]
name = "retail_manager"
version = "0.1.0"
authors = ["Santiago Ocamica <santi6982@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
actix-cors = "0.5.4"
actix-identity = "0.3.1"
actix-service = "1.0.6"
actix-web = "3.3.2"
anyhow = "1.0.31"
async-trait = "0.1.40"
chrono = { version = "0.4.11", features = ['serde'] }
dotenv = "0.15.0"
envy = "0.4.1"
futures = "0.3.5"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
opentelemetry = { version = "0.11.2", features = ['tokio'] }
opentelemetry-jaeger = { version = "0.10.0", features = ['tokio'] }
rust-argon2 = "0.8.2"
rust_decimal = "1.6.0"
rand = "0.7.3"
regex = "1.4.2"
serde = { version = "1.0.112", features = ['derive'] }
serde_json = "1.0.55"
sqlx = { version = "0.3.5", features = ['postgres', 'macros', 'chrono', 'uuid'] }
tracing = "0.1.21"
tracing-actix-web = "0.2.1"
tracing-bunyan-formatter = "0.1.7"
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-opentelemetry = "0.10.0"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
uuid = { version = "0.8.1", features = ['v4', 'serde'] }
