[package]
name = "customer_orders"
version = "0.1.0"
authors = ["Santiago Ocamica <santi6982@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }

async-trait = "^0.1.42"
chrono = { version = "^0.4.19", features = ['serde'] }
serde = { version = "^1.0.121", features = ['derive'] }
